--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="main.css">
 
         <title>Document</title>
 
@@ -50,6 +50,6 @@
     
     </body>
 
-    <script src="./js/main.js"></script>
+    <script src="main.js"></script>
 
 </html>
