--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="main.css">
 
-        <title>Document</title>
+        <title>Color Picker</title>
 
     </head>
 
